feat(Account): Close Account
